# foam

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/foam/: config.py  main.py  pages.py  schema.py  utils.py
src/foam/templates/: admin_py.jnj  config_js.jnj  models_py.jnj  pages_html.jnj  router_py.jnj  schema_html.jnj  serializers_py.jnj  test_api_py.jnj  views_py.jnj
test_data/: admin_pages.yaml  bio_ref_pages.yaml  bio_ref_schema.yaml  config.yaml  dump.json  experiment_pages.yaml  experiments.yaml  experiments_pages.yaml  experiments_schema.yaml  gen_pages.yaml  inventory_pages.yaml  inventory_schema.yaml  landing_page.yaml  package-lock.json  package.json  programs_pages.yaml  programs_schema.yaml  workflows.yaml
test_data/docs/: pages.html  schema.html
test_data/foam_backend/: manage.py  reset_db.sh
test_data/foam_backend/example/: admin.py  custom.py  models.py  router.py  serializers.py  test_api.py  views.py
test_data/foam_backend/example/migrations/: 0001_initial.py  0002_alter_assay_name_alter_experiment_name_and_more.py  0002_plate_platewell.py  0003_experiment_start_date_experiment_type_and_more.py  0004_cellline_assay_cell_line.py
test_data/foam_backend/foam_backend/: asgi.py  settings.py  urls.py  wsgi.py
test_data/foam_ui/: package-lock.json  package.json
test_data/foam_ui/src/: App.css  App.js  AppRouter.js  Components.js  FigurePage.js  LayoutPage.js  LinksPage.js  LoginPage.js  RecordPage.js  TablePage.js  comms.js  config.js  foam.css
test_data/foam_ui/src/lib/: AppRouter.js  Components.js  Data.js  (+8 more)
tests/: config_test.py  docs_test.py
